# misc

./: Makefile.am  TOH.cpp  bootstrap  configure.ac  tagged_tuple_1.cpp
BOOST-SERIAL/include/: Base.h  Derived1.h  Derived2.h  Serializer.h
BOOST-SERIAL/src/: Base.cpp  Derived1.cpp  Derived2.cpp  K.cpp  SERIAL.cpp
LEET/: Foo.cpp
codingground/ExprT Matrix/: .cg_conf  main  main.cpp  matrix.cpp
codingground/Normal Matrix/: main  main.cpp  matrix.cpp
codingground/Tagged Tuple/: .cg_conf  main  main.cpp  tagged_tuple.cpp
config/: CommonMakefile.am
google-apis/: 0.json  1.php  2.php  3.php  4.sh  Calendar.csv  README.txt
graph-builder/: graph.h  main.cpp
lib_/: Makefile.am
lib_/tests/: AIO_test.cpp  DiskContainer_test.cpp  EPollReactor_test.cpp
lib_/utils/: ConnectingSocket.h  File.cpp  File.h  SocketImplBase.cpp  SocketImplBase.h
niftycounter/: A.cpp  ABC.cpp  ABC.h  Log.h  NiftyCounter.h
tagged_tuple/: FunctionalLogic.cpp  Makefile  Usage.cpp  tagged_tuple.hpp
tagged_tuple/html/: FunctionalLogic.cpp.html  Usage.cpp.html  tagged_tuple.hpp.html
tests/: EPollReactor_test.cpp  File_test.cpp  temp_prog.cpp
utils/: AIOHandler.h  CommunicationSocket.h  ConnectingSocket.h  EPollReactor.h  File.cpp  File.h  ListeningSocket.h  SocketImplBase.cpp
