AC_INIT([DiskContainer], [0.1], [bug-report@diskcontainer.example.com], [diskcontainer], [http://diskcontainer.example.com/])
AC_PREREQ([2.59])
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([1.9.6 -Wall no-define subdir-objects])
AC_PROG_CXX
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
